--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,4 @@ production:
   database: trash_man_database_production
   username: root
   password: <%= ENV['TRASH_MAN_DATABASE_DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
